@@ -28,11 +28,15 @@ my %exit_status =
     dir => 2,
     vdir => 2,
     test => 2,
+    chroot => 125,
     echo => 0,
+    env => 125,
     expr => 0,
+    nice => 125,
     nohup => 127,
     sort => 2,
     stdbuf => 125,
+    su => 125,
     test => 0,
     timeout => 125,
     true => 0,
